# goliothd

./: CMakeLists.txt  Dockerfile
include/: golioth_user_config.h
src/: main.c
